Revert to original JPG masthead to fix live site clipping

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ footer a:visited { color: var(--rule); }
   width: 100%;
   height: auto;
   max-width: 100%;
-  aspect-ratio: 1200 / 380;
 }
 .masthead__meta-bar {
   display: flex;
